<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="general_no">NO</string>
    <string name="general_yes">YES</string>
    <string name="dialog_confirm_delete_caption">Please confirm</string>
    <string name="dialog_confirm_delete_text">Sure you want to delete \'%s\'?</string>
    <string name="list_context_menu_complete">Complete</string>
    <string name="list_context_menu_edit">Edit</string>
    <string name="list_context_menu_delete">Delete</string>
    <string name="list_menu_refresh">Refresh</string>
    <string name="list_menu_new">New</string>
    <string name="list_menu_filter_header">Filter</string>
    <string name="no_target_date">no target date</string>
    <string name="task_due_notification">Task is due!</string>
    <string name="app_name">Android Tasks</string>
	<string name="add_button_caption">Add</string>
	<string name="edit_task_activity_name">View Task</string>
	<string name="edit_commit_button_caption">Accept</string>
	<string name="edit_cancel_button_caption">Cancel</string>
	<string name="list_filter_all">All Tasks</string><string name="list_filter_all_in_range">Actual Tasks</string>
	<string name="list_filter_active">Active Tasks</string>
	<string name="list_filter_due">Due Tasks</string>
	<string name="list_filter_nodate">No Date Specified</string><string name="notification_complete">Complete task</string>
	<string name="notification_snooze_period">&lt;select period&gt;</string>
	<string name="notification_snooze">Snooze</string>
	<string name="notification_commit">Apply To Task</string>
	<string name="notification_activity_name">Due task notification</string>
	<string name="notification_task_targetdate_label">Target Date:  </string>
	<string name="notification_snooze_count">Snooze count: </string><string name="notification_edit">Open Task</string><string-array name="snooze_periods"><item>One minute</item><item>Two minutes</item><item>Five minutes</item>
	<item>Ten minutes</item>
	
	
	<item>½ hour</item>
	<item>1 hour</item>
	<item>2 hours</item>
	<item>3 hours</item>
	<item>4 hours</item>
	<item>8 hours</item>
	<item>1 day</item>
	<item>2 days</item>
	</string-array>
	<string name="edit_notes">Notes</string>
	<string name="edit_location">Location</string>
	<string-array name="reminder_types"><item>Manual</item><item>Every Minute</item><item>Hourly</item>
	<item>Daily</item>
	<item>Weekly</item>
	</string-array>
	<string name="prefs_weeks_before">weeks in the past</string>
	<string name="prefs_weeks_future">weeks in the future</string>
	<string name="prefs_ok_button">Save preferences</string>
	<string name="prefs_cancel_button">Cancel preferences</string>
	<string name="list_menu_prefs">Preferences</string>
	<string name="preferences_activity_name">Preferences</string>
	<string name="prefs_range_title">In my task lists, include tasks with target dates …</string>
	<string name="prefs_weeks">weeks</string>
	<string name="edit_options_menu_recurrence">Recurrence</string>
	<string name="recurrence_activity_name">Task Recurrence</string>
	<string name="recurrence_occurs">Task repeats every</string>
	<string-array name="recurrence_types"><item>No recurrence</item><item>minute(s)</item>
	<item>hour(s)</item>
	<item>day(s)</item>
	<item>week(s)</item>
	<item>month(s)</item>
	</string-array>
	<string name="recurrence_confirm_button">Confirm</string>
	<string name="recurrence_cancel_button">Cancel</string>
	<string name="prefs_vibrate">Vibrate on notification</string>
	<string name="prefs_weeks_label">weeks</string>
	<string name="prefs_purge_title">Purge completed taks with age more than</string>
	<string name="sync_with_toodledo_checkbox">Sync with Toodledo</string>
	<string name="toodledo_sync_password_label">Password</string>
	<string name="general_ok">Ok</string>
	<string name="toodledo_syncsettings_title">Toodledo Settings</string>
	<string name="toodledo_sync_user_label">User</string>
	<string name="toodledo_app_id_label">App Id</string>
	<string name="toodledo_app_token_label">App Token</string>
</resources>
