<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical"
  android:layout_width="fill_parent" android:layout_height="wrap_content">
  
  <TextView android:text="@string/recurrence_occurs" android:layout_width="fill_parent" 
  	android:layout_height="wrap_content" android:textSize="16sp" android:padding="3sp"/>
  
  <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content"
  	android:layout_width="fill_parent" >
    		
  	<EditText android:layout_width="wrap_content" android:minWidth="40sp" android:layout_height="wrap_content"
  		android:id="@+id/recurrency_value" android:inputType="number" />
  		
  	<Spinner android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" 
  		android:id="@+id/recurrence_type" />
  	
  </LinearLayout>
  
  <Button android:id="@+id/recurrence_confirm" android:layout_width="fill_parent" 
	android:layout_height="wrap_content" android:text="@string/recurrence_confirm_button"/>

  <Button android:id="@+id/recurrence_cancel" android:layout_width="fill_parent" 
	android:layout_height="wrap_content" android:text="@string/recurrence_cancel_button" />
  
</LinearLayout>
